fix alignement

--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ text-decoration:none;
 
 #links ul{
 text-align: center;
+margin-left: 0;
 }
 
 #links li {
